--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -87,127 +87,135 @@
     </string-array>
 
     <!-- When true, the tethering upstream network follows the current default
-         Internet network (except when the current default network is mobile,
-         in which case a DUN network will be used if required). -->
+	    Internet network (except when the current default network is mobile,
+    in which case a DUN network will be used if required). -->
     <bool translatable="false" name="config_tether_upstream_automatic">true</bool>
 
-    <!-- Boolean indicating whether the wifi chipset has dual frequency band support -->
+	    <!-- Boolean indicating whether the wifi chipset has dual frequency band support -->
     <bool translatable="false" name="config_wifi_dual_band_support">true</bool>
 
-    <!-- Boolean indicating whether the wifi chipset supports background scanning mechanism.
-         This mechanism allows the host to remain in suspend state and the dongle to actively
-         scan and wake the host when a configured SSID is detected by the dongle. This chipset
-         capability can provide power savings when wifi needs to be always kept on. -->
+	    <!-- Boolean indicating whether the wifi chipset supports background scanning mechanism.
+		    This mechanism allows the host to remain in suspend state and the dongle to actively
+		    scan and wake the host when a configured SSID is detected by the dongle. This chipset
+	    capability can provide power savings when wifi needs to be always kept on. -->
     <bool translatable="false" name="config_wifi_background_scan_support">true</bool>
 
-    <!-- Boolean indicating whether or not wifi firmware debugging is enabled -->
+	    <!-- Boolean indicating whether or not wifi firmware debugging is enabled -->
     <bool translatable="false" name="config_wifi_enable_wifi_firmware_debugging">false</bool>
 
-    <!-- Integer specifying the basic autojoin parameters -->
+	    <!-- Integer specifying the basic autojoin parameters -->
     <integer translatable="false" name="config_wifi_framework_5GHz_preference_boost_factor">5</integer>
-    <!-- Integer parameters of the wifi to cellular handover feature
-         wifi should not stick to bad networks -->
+	    <!-- Integer parameters of the wifi to cellular handover feature
+	    wifi should not stick to bad networks -->
     <integer translatable="false" name="config_wifi_framework_wifi_score_low_rssi_threshold_5GHz">-72</integer>
     <integer translatable="false" name="config_wifi_framework_wifi_score_good_rssi_threshold_5GHz">-60</integer>
     <integer translatable="false" name="config_wifi_framework_wifi_score_bad_rssi_threshold_24GHz">-87</integer>
     <integer translatable="false" name="config_wifi_framework_wifi_score_low_rssi_threshold_24GHz">-77</integer>
     <integer translatable="false" name="config_wifi_framework_wifi_score_good_rssi_threshold_24GHz">-65</integer>
 
-    <!-- Integer indicating RSSI boost given to current network -->
+	    <!-- Integer indicating RSSI boost given to current network -->
     <integer translatable="false" name="config_wifi_framework_current_network_boost">25</integer>
 
-    <!-- Wifi driver supports batched scan -->
+	    <!-- Wifi driver supports batched scan -->
     <bool translatable="false" name="config_wifi_batched_scan_supported">true</bool>
 
-    <!-- Flag indicating whether the we should enable the automatic brightness in Settings.
-         Software implementation will be used if config_hardware_auto_brightness_available is not set -->
+	    <!-- Flag indicating whether the we should enable the automatic brightness in Settings.
+	    Software implementation will be used if config_hardware_auto_brightness_available is not set -->
     <bool name="config_automatic_brightness_available">true</bool>
 
-    <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
+	    <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
     <bool name="config_intrusiveNotificationLed">true</bool>
 
-    <!-- If this is true, the screen will come on when you unplug usb/power/whatever. -->
+	    <!-- If this is true, the screen will come on when you unplug usb/power/whatever. -->
     <bool name="config_unplugTurnsOnScreen">true</bool>
 
-    <!-- If this is true, the screen will fade off. -->
+	    <!-- If this is true, the screen will fade off. -->
     <bool name="config_animateScreenLights">true</bool>
 
-    <!-- If true, the screen can be rotated via the accelerometer in all 4
-         rotations as the default behavior. -->
+	    <!-- If true, the screen can be rotated via the accelerometer in all 4
+	    rotations as the default behavior. -->
     <bool name="config_allowAllRotations">true</bool>
 
 
-    <!-- Indicate whether to allow the device to suspend when the screen is off
-         due to the proximity sensor.  This resource should only be set to true
-         if the sensor HAL correctly handles the proximity sensor as a wake-up source.
-         Otherwise, the device may fail to wake out of suspend reliably.
-         The default is false. -->
+	    <!-- Indicate whether to allow the device to suspend when the screen is off
+		    due to the proximity sensor.  This resource should only be set to true
+		    if the sensor HAL correctly handles the proximity sensor as a wake-up source.
+		    Otherwise, the device may fail to wake out of suspend reliably.
+	    The default is false. -->
     <bool name="config_suspendWhenScreenOffDueToProximity">true</bool>
 
 
-    <!-- Disable lockscreen rotation by default -->
+	    <!-- Disable lockscreen rotation by default -->
     <bool name="config_enableLockScreenRotation">false</bool>
 
-    <!-- Is the device capable of hot swapping an UICC Card -->
+	    <!-- Is the device capable of hot swapping an UICC Card -->
     <bool name="config_hotswapCapable">true</bool>
 
-    <!-- Minimum screen brightness setting allowed by the power manager.
-         The user is forbidden from setting the brightness below this level. -->
-    <integer name="config_screenBrightnessSettingMinimum">1</integer>
+	    <!-- Minimum screen brightness setting allowed by the power manager.
+	    The user is forbidden from setting the brightness below this level. -->
+    <integer name="config_screenBrightnessSettingMinimum">35</integer>
 
-    <!-- Stability requirements in milliseconds for accepting a new brightness level.  This is used
-         for debouncing the light sensor.  Different constants are used to debounce the light sensor
-         when adapting to brighter or darker environments.  This parameter controls how quickly
-         brightness changes occur in response to an observed change in light level that exceeds the
-         hysteresis threshold. -->
+	    <!-- Stability requirements in milliseconds for accepting a new brightness level.  This is used
+		    for debouncing the light sensor.  Different constants are used to debounce the light sensor
+		    when adapting to brighter or darker environments.  This parameter controls how quickly
+		    brightness changes occur in response to an observed change in light level that exceeds the
+	    hysteresis threshold. -->
     <integer name="config_autoBrightnessBrighteningLightFastDebounce">500</integer>
     <integer name="config_autoBrightnessBrighteningLightDebounce">2000</integer>
-    <integer name="config_autoBrightnessDarkeningLightDebounce">6000</integer>
+    <integer name="config_autoBrightnessDarkeningLightDebounce">2000</integer>
 
-    <!-- Array of light sensor LUX values to define our levels for auto backlight brightness support.
-         The N entries of this array define N + 1 control points as follows:
-         (1-based arrays)
+	    <!-- Array of light sensor LUX values to define our levels for auto backlight brightness support.
+		    The N entries of this array define N + 1 control points as follows:
+		    (1-based arrays)
 
-         Point 1:            (0, value[1]):             lux <= 0
-         Point 2:     (level[1], value[2]):  0        < lux <= level[1]
-         Point 3:     (level[2], value[3]):  level[2] < lux <= level[3]
-         ...
-         Point N+1: (level[N], value[N+1]):  level[N] < lux
+		    Point 1:            (0, value[1]):             lux <= 0
+		    Point 2:     (level[1], value[2]):  0        < lux <= level[1]
+		    Point 3:     (level[2], value[3]):  level[2] < lux <= level[3]
+		    ...
+		    Point N+1: (level[N], value[N+1]):  level[N] < lux
 
-         The control points must be strictly increasing.  Each control point
-         corresponds to an entry in the brightness backlight values arrays.
-         For example, if LUX == level[1] (first element of the levels array)
-         then the brightness will be determined by value[2] (second element
-         of the brightness values array).
+		    The control points must be strictly increasing.  Each control point
+		    corresponds to an entry in the brightness backlight values arrays.
+		    For example, if LUX == level[1] (first element of the levels array)
+		    then the brightness will be determined by value[2] (second element
+		    of the brightness values array).
 
-         Spline interpolation is used to determine the auto-brightness
-         backlight values for LUX levels between these control points.
+		    Spline interpolation is used to determine the auto-brightness
+		    backlight values for LUX levels between these control points.
 
-         Must be overridden in platform specific overlays -->
+	    Must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLevels">
-        <item>10</item>
-        <item>30</item>
-        <item>60</item>
-        <item>100</item>
-        <item>150</item>
-        <item>210</item>
-        <item>255</item>
+	    <item>40</item>
+	    <item>65</item>
+	    <item>97</item>
+	    <item>124</item>
+	    <item>150</item>
+	    <item>170</item>
+	    <item>230</item>
+	    <item>281</item>
+	    <item>322</item>
+	    <item>373</item>
+	    <item>425</item>
     </integer-array>
 
     <!-- Array of output values for LCD backlight corresponding to the LUX values
-         in the config_autoBrightnessLevels array.  This array should have size one greater
-         than the size of the config_autoBrightnessLevels array.
-         The brightness values must be between 0 and 255 and be non-decreasing.
-         This must be overridden in platform specific overlays -->
+	    in the config_autoBrightnessLevels array.  This array should have size one greater
+	    than the size of the config_autoBrightnessLevels array.
+	    The brightness values must be between 0 and 255 and be non-decreasing.
+    This must be overridden in platform specific overlays -->
     <integer-array name="config_autoBrightnessLcdBacklightValues">
-        <item>10</item>
-        <item>20</item>
-        <item>40</item>
-        <item>70</item>
-        <item>110</item>
-        <item>160</item>
-        <item>200</item>
-        <item>255</item>
+	    <item>35</item>
+	    <item>55</item>
+	    <item>75</item>
+	    <item>95</item>
+	    <item>115</item>
+	    <item>135</item>
+	    <item>155</item>
+	    <item>175</item>
+	    <item>195</item>
+	    <item>215</item>
+	    <item>235</item>
+	    <item>255</item>
     </integer-array>
 
 
@@ -420,6 +428,10 @@
     <!-- Boolean indicating whether the HWC setColorTransform function can be performed efficiently
          in hardware. -->
     <bool name="config_setColorTransformAccelerated">true</bool>
+	    <!-- Control whether Night display is available. This should only be enabled on devices
+		    that have a HWC implementation that can apply the matrix passed to setColorTransform
+	    without impacting power, performance, and app compatibility (e.g. protected content). -->
+    <bool name="config_nightDisplayAvailable">false</bool>
 
     <!-- Boolean indicating if current platform supports HFP inband ringing -->
     <bool name="config_bluetooth_hfp_inband_ringing_support">true</bool>
